# youbot-kinect-turtlebot-grasp

./: README.md
youbot_grasp/src/: 演示过程
youbot_grasp/src/PaxHeader/: 演示过程
youbot_grasp/src/rpg_youbot_torque_control/torque_control/src/: a1.cpp
youbot_grasp/src/rpg_youbot_torque_control/torque_example/: CMakeLists.txt  package.xml
youbot_grasp/src/rpg_youbot_torque_control/torque_example/src/: base.cpp  circle.cpp  fk1  linux_new_ltr3.cpp  ltr.cpp  ltr1.cpp  ltr2.cpp  ltr3.cpp  new_ltr3.cpp  testfk.cpp
